--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Hire Me</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -60,15 +60,15 @@
                 <img src="assets/img/introduction-visual.png" alt="Welcome">
               </div>
               <div class="intro--options">
-                <a href="#0">
+                <a href="#0" style="color:white;">
                   <h3>Collin Wells</h3>
                   <p>Collin has had a long and varied history in technical roles with experience in website design, team leadership, content creation, and data driven performance analysis, coaching, and developent.</p>
                 </a>
-                <a href="#0">
+                <a href="#0" style="color:white;">
                   <h3>Current Focus</h3>
                   <p>Recently, Collin has been looking to refine and develop his skillset and abilities to pursue new challenges in the ever growing field of data analytics.</p>
                 </a>
-                <a href="#0">
+                <a href="#0" style="color:white;">
                   <h3>Why Data Analysis?</h3>
                   <p>Data Analytics are becoming more and more necessary to organizations of any size to utilize collected data for informed decision making and directional planning, and offers a rich landscape in which to make an impact through daily efforts.</p>
                 </a>
@@ -129,7 +129,7 @@
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="intro--options">
-                <a href="#0">
+                <a href="#0" style="color:white;">
                   <h3>If you don't know where you're going, any road will take you there.</h3>
                   <p>Sometimes we follow the path in front of us not knowing where it will lead. I believe the skills I developed because of my varied experience has allowed me to see the road where I am going more clearly.</p>
                 </a>
