--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <li class="slider--item slider--item-center">
                     <a href="https://skurbles.github.io/DA-Projects/CovidDataAnalysis">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Covid Analysis">
+                        <img src="assets/img/pro3.png" alt="Covid Analysis">
                       </div>
                       <p class="slider--item-title">Covid Project</p>
                       <p class="slider--item-description">Sample SQL and Tableau analysis utilizing a large global dataset.</p>
