--- a/CovidDataAnalysis/index.html
+++ b/CovidDataAnalysis/index.html
@@ -331,7 +331,7 @@
                         <h3>Packed Bubble Graph</h3>
                         <p>Packed bubble graphs are another great way of displaying a value in many ways all at once.  
                            In the example here we can see that the size of the bubbles represent the relative size of the population while the color saturation represents the relative number of vaccinations. 
-                           As you can see in the example here Vietnam has a relatively small population, but a large vaccinated percentage. Unlike India where they have a massive population, but relatively few vaccinations.</p>
+                           As you can see in the example here Vietnam has a relatively small population, but a large vaccinated percentage. Unlike Africa where they have a massive population, but relatively few vaccinations.</p>
                      </div>
                   </div>
                </div>
