--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <div class="intro--options">
                 <a href="#0" style="color:white;">
                   <h3>If you don't know where you're going, any road will take you there.</h3>
-                  <p>Sometimes we follow the path in front of us not knowing where it will lead. I believe the skills I developed because of my varied experience has allowed me to see the road where I am going more clearly.</p>
+                  <p>Sometimes we follow the path in front of us not knowing where it will lead. I believe the skills I developed because of my varied experience has allowed me to see the road where I am going more clearly. Identifying actionable insights through data analysis can help you and your business see more clearly as well.</p>
                 </a>
             </div>
           </li>
