--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
               <div class="intro--options">
                 <a href="#0" style="color:white;">
                   <h3>Collin Wells</h3>
-                  <p>Collin has had a long and varied history in technical roles with experience in website design, team leadership, content creation, and data driven performance analysis, coaching, and developent.</p>
+                  <p>Collin has had a long and varied history in technical roles with experience in IT Management, website design, team leadership, content creation, and data driven performance analysis, coaching, and developent.</p>
                 </a>
                 <a href="#0" style="color:white;">
                   <h3>Current Focus</h3>
-                  <p>Recently, Collin has been looking to refine and develop his skillset and abilities to pursue new challenges in the ever growing field of data analytics.</p>
+                  <p>Recently, Collin has been looking to refine and develop his skillset and abilities to pursue new challenges in the ever growing field of IT Management, Cybersecurity, and Data Analytics.</p>
                 </a>
                 <a href="#0" style="color:white;">
                   <h3>Why Data Analysis?</h3>
-                  <p>Data Analytics are becoming more and more necessary to organizations of any size to utilize collected data for informed decision making and directional planning, and offers a rich landscape in which to make an impact through daily efforts.</p>
+                  <p>Data Analysis is becoming more and more necessary to organizations of any size to utilize collected data for informed decision making and directional planning, and offers a rich landscape in which to make an impact through daily efforts. Being able to analyze data samples and apply the outcome to guide decision making translates to any modern day enterprise environment or deployment. </p>
                 </a>
               </div>
             </div>
